Modificações nos textos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,14 @@
         "ratio": "cpp",
         "bit": "cpp",
         "optional": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "condition_variable": "cpp",
+        "csignal": "cpp",
+        "cstring": "cpp",
+        "unordered_set": "cpp",
+        "map": "cpp",
+        "iomanip": "cpp",
+        "mutex": "cpp",
+        "thread": "cpp"
     }
 }
